Fixed append on files and changed the start values.

--- a/market_simulation.ipynb
+++ b/market_simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -241,7 +241,7 @@
     "                    ratingCompetitors[c][countAdjustmentsCompany]= ratingCompanies[c];\n",
     "    #print(salesBetweenAdjustments)\n",
     "    \n",
-    "    with open('arrival_out_S3.txt', 'w') as file:\n",
+    "    with open('arrival_out_S3.txt', 'a') as file:\n",
     "        writer = csv.writer(file, delimiter='\\t')\n",
     "        for w in range(numberPriceAdjustmentsBeforeHorizon-1):\n",
     "            currentSim = list(filter(lambda x : x != 0, arrival_out[w]))\n",
@@ -249,7 +249,7 @@
     "                line = list(currentSim[c])\n",
     "                writer.writerow(line)\n",
     "            \n",
-    "    with open('buying_out_S3.txt', 'w') as file:\n",
+    "    with open('buying_out_S3.txt', 'a') as file:\n",
     "        writer = csv.writer(file, delimiter='\\t')\n",
     "        for w in range(numberPriceAdjustmentsBeforeHorizon-1):\n",
     "            currentSim = list(filter(lambda x : x != 0, buying_out[w]))\n",
@@ -257,7 +257,7 @@
     "                line = list(currentSim[c])\n",
     "                writer.writerow(line)\n",
     "            \n",
-    "    with open('trajekt1_out_S3.txt', 'w') as file:\n",
+    "    with open('trajekt1_out_S3.txt', 'a') as file:\n",
     "        writer = csv.writer(file, delimiter='\\t')\n",
     "        for w in range(numberPriceAdjustmentsBeforeHorizon-1):\n",
     "            currentSim = list(filter(lambda x : x != 0, trajekt1_out[w]))\n",
@@ -270,26 +270,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def priceAdjustmentRules(c, pricesCompanies):\n",
     "    return {\n",
-    "        '0' : 10 if pricesCompanies[c]<5 else min([max(4.9, pricesCompanies[company]-0.5) for company in range(numberPlayers) if company != c]),\n",
-    "        '1' : 9 if pricesCompanies[c]<4 else min([max(3.9, pricesCompanies[company]-0.5) for company in range(numberPlayers) if company != c]),\n",
-    "        '2' : 12 if pricesCompanies[c]<6 else min([max(5.9, pricesCompanies[company]-0.5) for company in range(numberPlayers) if company != c]),\n",
+    "        '0' : 10 if pricesCompanies[c]<5 else round(min([max(4.9, pricesCompanies[company]-0.5) for company in range(numberPlayers) if company != c]),2),\n",
+    "        '1' : 9 if pricesCompanies[c]<4 else round(min([max(3.9, pricesCompanies[company]-0.5) for company in range(numberPlayers) if company != c]),2),\n",
+    "        '2' : 12 if pricesCompanies[c]<6 else round(min([max(5.9, pricesCompanies[company]-0.5) for company in range(numberPlayers) if company != c]),2),\n",
     "        '3' : round(random.uniform(11,11),2),\n",
     "        '4' : round(random.uniform(13,13),2)\n",
     "    }[str(c)]\n",
     "\n",
     "numberPlayers=5\n",
-    "timeHorizon=1\n",
-    "numberReactionEvents=100\n",
-    "meanDifferenceCustomerArrival=0.05\n",
-    "numberCustomerEvents=300\n",
+    "timeHorizon=200\n",
+    "numberReactionEvents=timeHorizon+100\n",
+    "meanDifferenceCustomerArrival=1\n",
+    "numberCustomerEvents=int(timeHorizon/meanDifferenceCustomerArrival+100)\n",
     "iterateDifferentStart=100\n",
     "iterateSameStart=100\n",
     "companyToWatch=0\n",
