Fixed the prediction_data output and some rounding errors.

--- a/intensity.ipynb
+++ b/intensity.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -14,7 +16,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "numberPlayers = 5\n",
@@ -30,7 +34,9 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pricesCompanies = np.array([round(random.uniform(6,16),2) for _ in range(numberPlayers)])\n",
@@ -41,7 +47,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "numberConsideredMarketSituations = 1\n",
@@ -54,7 +62,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def calculateTimeOfAdjustmentsCompany(company, simulationNumber, i, timeBetweenMarketEventsCompany):\n",
@@ -75,8 +85,8 @@
     "def priceAdjustmentRules(c, pricesCompanies):\n",
     "    return {\n",
     "        '0' : pricesCompanies[0],\n",
-    "        '1' : 9 if pricesCompanies[c]<4 else min([max(3.9, pricesCompanies[company]-0.5) for company in range(numberPlayers) if company != c]),\n",
-    "        '2' : 12 if pricesCompanies[c]<6 else min([max(5.9, pricesCompanies[company]-0.5) for company in range(numberPlayers) if company != c]),\n",
+    "        '1' : 9 if pricesCompanies[c]<4 else round(min([max(3.9, pricesCompanies[company]-0.5) for company in range(numberPlayers) if company != c]),2),\n",
+    "        '2' : 12 if pricesCompanies[c]<6 else round(min([max(5.9, pricesCompanies[company]-0.5) for company in range(numberPlayers) if company != c]),2),\n",
     "        '3' : round(random.uniform(11,11),2),\n",
     "        '4' : round(random.uniform(13,13),2)\n",
     "    }[str(c)]\n",
@@ -91,7 +101,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "m=2\n",
@@ -176,7 +188,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
