--- a/monte_carlo.ipynb
+++ b/monte_carlo.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The line_profiler extension is already loaded. To reload it, use:\n",
-      "  %reload_ext line_profiler\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import random\n",
@@ -24,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -42,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -55,10 +46,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "numberConsideredMarketSituations = 40\n",
@@ -67,53 +56,49 @@
     "qualityCompaniesPred = np.array([[round(random.uniform(0.5,5.5)) for _ in range(numberConsideredMarketSituations)]  for _ in range(numberPlayers)])\n",
     "ratingCompaniesPred = np.array([[round(random.uniform(90,100),1) for _ in range(numberConsideredMarketSituations)] for _ in range(numberPlayers)])\n",
     "\n",
-    "priceRanksForFirm = [1 +  \n",
-    "              sum([1 for i in range(numberPlayers) if prices[j]> pricesCompanies[i] and i!=watchedCompany]) +\n",
-    "              sum([1 for i in range(numberPlayers) if prices[j]== pricesCompanies[i] and i!=watchedCompany])/2\n",
-    "              for j in range(len(prices))]\n",
-    "qualityRankForFirm = (1 +  \n",
-    "              sum([1 for i in range(numberPlayers) if qualityCompanies[watchedCompany]> qualityCompanies[i] and i!=watchedCompany]) +\n",
-    "              sum([1 for i in range(numberPlayers) if qualityCompanies[watchedCompany]== qualityCompanies[i] and i!=watchedCompany])/2)\n",
-    "                \n",
-    "ratingRankForFirm = (1 +  \n",
-    "              sum([1 for i in range(numberPlayers) if ratingCompanies[watchedCompany]> ratingCompanies[i] and i!=watchedCompany]) +\n",
-    "              sum([1 for i in range(numberPlayers) if ratingCompanies[watchedCompany]== ratingCompanies[i] and i!=watchedCompany])/2)\n",
-    "             \n",
-    "ratingRanks = [1 +  \n",
-    "              sum([1 for i in range(numberPlayers) if ratingCompanies[j]> ratingCompanies[i] and i!=j]) +\n",
-    "              sum([1 for i in range(numberPlayers) if ratingCompanies[j]== ratingCompanies[i] and i!=j])/2\n",
-    "              for j in range(numberPlayers)]\n",
+    "priceRanksForFirm = [[1 +  \n",
+    "              sum([1 for i in range(numberPlayers) if prices[j]> pricesCompaniesPred[i][w] and i!=watchedCompany]) +\n",
+    "              sum([1 for i in range(numberPlayers) if prices[j]== pricesCompaniesPred[i][w] and i!=watchedCompany])/2\n",
+    "              for j in range(len(prices))]for w in range(numberConsideredMarketSituations)]\n",
+    "qualityRankForFirm = [(1 +  \n",
+    "              sum([1 for i in range(numberPlayers) if qualityCompaniesPred[watchedCompany][w]> qualityCompaniesPred[i][w] and i!=watchedCompany]) +\n",
+    "              sum([1 for i in range(numberPlayers) if qualityCompaniesPred[watchedCompany][w]== qualityCompaniesPred[i][w] and i!=watchedCompany])/2)for w in range(numberConsideredMarketSituations)]\n",
+    "                         \n",
+    "ratingRanks = [[1 +  \n",
+    "              sum([1 for i in range(numberPlayers) if ratingCompaniesPred[j][w]> ratingCompaniesPred[i][w] and i!=j]) +\n",
+    "              sum([1 for i in range(numberPlayers) if ratingCompaniesPred[j][w]== ratingCompaniesPred[i][w] and i!=j])/2\n",
+    "              for j in range(numberPlayers)]for w in range(numberConsideredMarketSituations)]\n",
     "\n",
     "numberExplanatoryVariables = 10\n",
     "\n",
-    "def explanatoryVariables(explanatoryVariable, numberPrice):\n",
+    "def explanatoryVariables(explanatoryVariable, numberPrice, marketSituation):\n",
     "    return {\n",
     "        '0' : 1,\n",
-    "        '1' : priceRanksForFirm[numberPrice],\n",
-    "        '2' : 1 if priceRanksForFirm[numberPrice]==1 else 0,\n",
-    "        '3' : qualityRankForFirm,\n",
-    "        '4' : ratingRankForFirm,\n",
+    "        '1' : priceRanksForFirm[marketSituation][numberPrice],\n",
+    "        '2' : 1 if priceRanksForFirm[marketSituation][numberPrice]==1 else 0,\n",
+    "        '3' : qualityRankForFirm[marketSituation],\n",
+    "        '4' : ratingRanks[marketSituation][watchedCompany],\n",
     "        '5' : prices[numberPrice],\n",
-    "        '6' : prices[numberPrice] - min([pricesCompanies[j] for j in range(numberPlayers) if j!=watchedCompany]) if numberPlayers > 1 else 0,\n",
-    "        '7' : qualityCompanies[watchedCompany],\n",
-    "        '8' : ratingCompanies[watchedCompany],\n",
-    "        '9' : 15 - (prices[numberPrice]+0.5*qualityCompanies[watchedCompany]+0.25*(100-ratingCompanies[watchedCompany])) if(\n",
-    "        (prices[numberPrice]+0.5*qualityCompanies[watchedCompany]+0.25*(100-ratingCompanies[watchedCompany])) <\n",
-    "        min([pricesCompanies[j] +0.5*qualityCompanies[j]+0.25*(100-ratingCompanies[j]) for j in range(numberPlayers) if j!= watchedCompany]))\n",
+    "        '6' : prices[numberPrice] - min([pricesCompaniesPred[j][marketSituation] for j in range(numberPlayers) if j!=watchedCompany]) if numberPlayers > 1 else 0,\n",
+    "        '7' : qualityCompaniesPred[watchedCompany][marketSituation],\n",
+    "        '8' : ratingCompaniesPred[watchedCompany][marketSituation],\n",
+    "        '9' : 15 - (prices[numberPrice]+0.5*qualityCompaniesPred[watchedCompany][marketSituation]+0.25*(100-ratingCompaniesPred[watchedCompany][marketSituation])) if(\n",
+    "        (prices[numberPrice]+0.5*qualityCompaniesPred[watchedCompany][marketSituation]+0.25*(100-ratingCompaniesPred[watchedCompany][marketSituation])) <\n",
+    "        min([pricesCompaniesPred[j][marketSituation] +0.5*qualityCompaniesPred[j][marketSituation]+0.25*(100-ratingCompaniesPred[j][marketSituation]) for j in range(numberPlayers) if j!= watchedCompany]))\n",
     "        else 0,\n",
     "    }[str(explanatoryVariable)]\n",
     "\n",
-    "valuesExplanatoryVariables = [[explanatoryVariables(explanatoryVariable, numberPrice) for explanatoryVariable in range(numberExplanatoryVariables)] for numberPrice in range(len(prices))]\n",
+    "valuesExplanatoryVariables = [[[explanatoryVariables(explanatoryVariable, numberPrice, w) for explanatoryVariable in range(numberExplanatoryVariables)] for numberPrice in range(len(prices))]for w in range(numberConsideredMarketSituations)]\n",
     "predictionEstimated = [[0.5 for _ in range(len(prices))] for _ in range(numberConsideredMarketSituations)]\n",
     "\n",
     "with open('demand_prediction_data_S3.txt', 'w') as file:\n",
     "    writer = csv.writer(file, delimiter='\\t')\n",
-    "    for count in range(numberConsideredMarketSituations):\n",
+    "    for marketSituation in range(numberConsideredMarketSituations):\n",
     "        for numberPrice in range(len(prices)):\n",
-    "            line = list(valuesExplanatoryVariables[numberPrice])\n",
+    "            line = list(valuesExplanatoryVariables[marketSituation][numberPrice])\n",
     "            line.remove(1)\n",
     "            line.insert(0, prices[numberPrice])\n",
-    "            line.insert(0, count+1)\n",
+    "            line.insert(0, marketSituation+1)\n",
     "            writer.writerow(line)"
    ]
   },
@@ -143,8 +128,8 @@
     "def priceAdjustmentRules(c, pricesCompanies):\n",
     "    return {\n",
     "        '0' : pricesCompanies[0],\n",
-    "        '1' : 9 if pricesCompanies[c]<4 else min([max(3.9, pricesCompanies[company]-0.5) for company in range(numberPlayers) if company != c]),\n",
-    "        '2' : 12 if pricesCompanies[c]<6 else min([max(5.9, pricesCompanies[company]-0.5) for company in range(numberPlayers) if company != c]),\n",
+    "        '1' : 9 if pricesCompanies[c]<4 else round(min([max(3.9, pricesCompanies[company]-0.5) for company in range(numberPlayers) if company != c]),2),\n",
+    "        '2' : 12 if pricesCompanies[c]<6 else round(min([max(5.9, pricesCompanies[company]-0.5) for company in range(numberPlayers) if company != c]),2),\n",
     "        '3' : round(random.uniform(11,11),2),\n",
     "        '4' : round(random.uniform(13,13),2)\n",
     "    }[str(c)]\n",
@@ -159,7 +144,9 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "m=2\n",
@@ -244,7 +231,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
