--- a/intensity.ipynb
+++ b/intensity.ipynb
@@ -176,7 +176,7 @@
     "            P_ori[w][a] = 1-A[watchedCompany][0][w]\n",
     "            P_ori2[w][a] = A[watchedCompany][2][w]\n",
     "\n",
-    "with open('cond_prob_out_S3.txt', 'w') as file:\n",
+    "with open('cond_prob_out_S3.csv', 'w') as file:\n",
     "    writer = csv.writer(file, delimiter='\\t')\n",
     "    for w in range(numberConsideredMarketSituations):\n",
     "        for t in range(bb+1):\n",
