--- a/market_simulation.ipynb
+++ b/market_simulation.ipynb
@@ -241,7 +241,7 @@
     "                    ratingCompetitors[c][countAdjustmentsCompany]= ratingCompanies[c];\n",
     "    #print(salesBetweenAdjustments)\n",
     "    \n",
-    "    with open('arrival_out_S3.txt', 'a') as file:\n",
+    "    with open('arrival_out_S3.csv', 'a') as file:\n",
     "        writer = csv.writer(file, delimiter='\\t')\n",
     "        for w in range(numberPriceAdjustmentsBeforeHorizon-1):\n",
     "            currentSim = list(filter(lambda x : x != 0, arrival_out[w]))\n",
@@ -249,7 +249,7 @@
     "                line = list(currentSim[c])\n",
     "                writer.writerow(line)\n",
     "            \n",
-    "    with open('buying_out_S3.txt', 'a') as file:\n",
+    "    with open('buying_out_S3.csv', 'a') as file:\n",
     "        writer = csv.writer(file, delimiter='\\t')\n",
     "        for w in range(numberPriceAdjustmentsBeforeHorizon-1):\n",
     "            currentSim = list(filter(lambda x : x != 0, buying_out[w]))\n",
@@ -257,7 +257,7 @@
     "                line = list(currentSim[c])\n",
     "                writer.writerow(line)\n",
     "            \n",
-    "    with open('trajekt1_out_S3.txt', 'a') as file:\n",
+    "    with open('trajekt1_out_S3.csv', 'a') as file:\n",
     "        writer = csv.writer(file, delimiter='\\t')\n",
     "        for w in range(numberPriceAdjustmentsBeforeHorizon-1):\n",
     "            currentSim = list(filter(lambda x : x != 0, trajekt1_out[w]))\n",
