--- a/monte_carlo.ipynb
+++ b/monte_carlo.ipynb
@@ -91,7 +91,7 @@
     "valuesExplanatoryVariables = [[[explanatoryVariables(explanatoryVariable, numberPrice, w) for explanatoryVariable in range(numberExplanatoryVariables)] for numberPrice in range(len(prices))]for w in range(numberConsideredMarketSituations)]\n",
     "predictionEstimated = [[0.5 for _ in range(len(prices))] for _ in range(numberConsideredMarketSituations)]\n",
     "\n",
-    "with open('demand_prediction_data_S3.txt', 'w') as file:\n",
+    "with open('demand_prediction_data_S3.csv', 'w') as file:\n",
     "    writer = csv.writer(file, delimiter='\\t')\n",
     "    for marketSituation in range(numberConsideredMarketSituations):\n",
     "        for numberPrice in range(len(prices)):\n",
@@ -219,7 +219,7 @@
     "\n",
     "D_P = [1/numberConsideredMarketSituations*sum([abs(P_ori[w][a]- predictionEstimated[w][a]) for w in range(numberConsideredMarketSituations)]) for a in range(len(prices))]\n",
     "D_EW = [1/numberConsideredMarketSituations*sum([abs(EW_ori[a][w]- EW_est[a][w]) for w in range(numberConsideredMarketSituations)]) for a in range(len(prices))]\n",
-    "with open('PEW_vergleich_csv_S3.txt', 'w') as file:\n",
+    "with open('PEW_comparison_S3.csv', 'w') as file:\n",
     "    writer = csv.writer(file, delimiter='\\t')\n",
     "    for w in range(numberConsideredMarketSituations):\n",
     "        for a in range(len(prices)):\n",
