Add descriptions to notebooks.

--- a/intensity.ipynb
+++ b/intensity.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Intensity\n",
+    "\n",
+    "This notebook is similiar to the second part of the `monte_carlo` notebook, but it runs everything for only one price. The time between adjustments of prices gets split into `B` parts and for each purchase the time slot `o` fit is tracked. At the end, it outputs a probability for each time slot, which corresponds to how likely a purchase is in this time slot after a price adjustment. The probabilities are saved in the `cond_prob_out` file."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
@@ -25,7 +34,7 @@
     "timeHorizon = 1\n",
     "numberMarketReactionEvents = round(1.1*timeHorizon)\n",
     "meanTimeBetweenCustomerArrival = 0.05\n",
-    "numberOfCustomerEvents = 20#round(1.1*timeHorizon/meanTimeBetweenCustomerArrival)\n",
+    "numberOfCustomerEvents = 20\n",
     "prices = [6.5]\n",
     "watchedCompany = 0\n",
     "numberSimulations = 10000"
@@ -184,15 +193,6 @@
     "            writer.writerow(line)\n",
     "            "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
