--- a/market_simulation.ipynb
+++ b/market_simulation.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Market Simulation\n",
+    "\n",
+    "This notebook creates three files.\n",
+    "For a given number of market situations, each market situation is simulated with the same starting condition multiple times for a specified time horizon.\n",
+    "For every simulation, we note the arrival of customers in the `arrival_out` file, the purchases in the `buying_out` file and the current price for each company in the `traject_out` file."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -57,7 +68,7 @@
     "              sum([1 for i in range(numberPlayers) if ratingCompanies[j]== ratingCompanies[i] and i!=j])/2\n",
     "              for j in range(numberPlayers)]\n",
     "\n",
-    "    accumulatedProfit = [0 for _ in range(numberPlayers)]; # for example: sum([x+5 for x in range(numberPlayersForIndex)])\n",
+    "    accumulatedProfit = [0 for _ in range(numberPlayers)]\n",
     "    createSimulationParameters(pricesCompanies, qualityCompanies, ratingCompanies, priceRanks, qualityRanks, ratingRanks, accumulatedProfit)"
    ]
   },
@@ -257,7 +268,7 @@
     "                line = list(currentSim[c])\n",
     "                writer.writerow(line)\n",
     "            \n",
-    "    with open('trajekt1_out_S3.csv', 'a') as file:\n",
+    "    with open('traject1_out_S3.csv', 'a') as file:\n",
     "        writer = csv.writer(file, delimiter='\\t')\n",
     "        for w in range(numberPriceAdjustmentsBeforeHorizon-1):\n",
     "            currentSim = list(filter(lambda x : x != 0, trajekt1_out[w]))\n",
@@ -270,27 +281,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-57003980fe57>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0miterateSameStart\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0mcompanyToWatch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0mstart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-2-e2ca0e969e28>\u001b[0m in \u001b[0;36mstart\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mAA\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m15\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     for i in range(iterateDifferentStart) : {\n\u001b[0;32m----> 4\u001b[0;31m         \u001b[0mcreateBasicInfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     }\n",
-      "\u001b[0;32m<ipython-input-3-55759353e387>\u001b[0m in \u001b[0;36mcreateBasicInfo\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0maccumulatedProfit\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumberPlayers\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0;31m# for example: sum([x+5 for x in range(numberPlayersForIndex)])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m     \u001b[0mcreateSimulationParameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpricesCompanies\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mqualityCompanies\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mratingCompanies\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpriceRanks\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mqualityRanks\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mratingRanks\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccumulatedProfit\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-5-ca6a3ec12219>\u001b[0m in \u001b[0;36mcreateSimulationParameters\u001b[0;34m(pricesCompanies, qualityCompanies, ratingCompanies, priceRanks, qualityRanks, ratingRanks, accumulatedProfit)\u001b[0m\n\u001b[1;32m     35\u001b[0m                      \u001b[0mtimeBetweenMarketEvents\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimeOfAdjustmentsCompany\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpriceAdjustmentsBeforeHorizon\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnumberPriceAdjustmentsBeforeHorizon\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m                      \u001b[0mtimePriceAdjustments\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimeBetweenAdjustments\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimeBetweenCustomerEvents\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimeOfCustomerArrival\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcompanyAdjustingAtTime\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 37\u001b[0;31m                      randomCustomerScoringOfCompany, randomCustomerScoringQuality, randomCustomerScoringRating, randomCustomerDecision)\n\u001b[0m\u001b[1;32m     38\u001b[0m     }\n",
-      "\u001b[0;32m<ipython-input-6-9b33b2ec2a64>\u001b[0m in \u001b[0;36mcreateWatchParameters\u001b[0;34m(pricesCompanies, qualityCompanies, ratingCompanies, priceRanks, qualityRanks, ratingRanks, accumulatedProfit, timeBetweenMarketEvents, timeOfAdjustmentsCompany, priceAdjustmentsBeforeHorizon, numberPriceAdjustmentsBeforeHorizon, timePriceAdjustments, timeBetweenAdjustments, timeBetweenCustomerEvents, timeOfCustomerArrival, companyAdjustingAtTime, randomCustomerScoringOfCompany, randomCustomerScoringQuality, randomCustomerScoringRating, randomCustomerDecision)\u001b[0m\n\u001b[1;32m     35\u001b[0m                  \u001b[0mcurrentTimeProcess\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcountAdjustmentsCompany\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwatchedCompany\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcountAdjustmentsWatchedCompany\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimeAdjustmentsWatchedCompany\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m                  \u001b[0mtimeBetweenAdjustmentsWatchedCompany\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msalesBetweenAdjustments\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mquality\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrating\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpricesCompetitors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mqualityCompetitors\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 37\u001b[0;31m                  ratingCompetitors)\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-7-faabd2650ae2>\u001b[0m in \u001b[0;36mrunSimulation\u001b[0;34m(pricesCompanies, qualityCompanies, ratingCompanies, priceRanks, qualityRanks, ratingRanks, accumulatedProfit, timeBetweenMarketEvents, timeOfAdjustmentsCompany, priceAdjustmentsBeforeHorizon, numberPriceAdjustmentsBeforeHorizon, timePriceAdjustments, timeBetweenAdjustments, timeBetweenCustomerEvents, timeOfCustomerArrival, companyAdjustingAtTime, randomCustomerScoringOfCompany, randomCustomerScoringQuality, randomCustomerScoringRating, randomCustomerDecision, currentTimeProcess, countAdjustmentsCompany, watchedCompany, countAdjustmentsWatchedCompany, timeAdjustmentsWatchedCompany, timeBetweenAdjustmentsWatchedCompany, salesBetweenAdjustments, price, quality, rating, pricesCompetitors, qualityCompetitors, ratingCompetitors)\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mtrajekt1_out\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumberPlayers\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumberPriceAdjustmentsBeforeHorizon\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnumberPriceAdjustmentsBeforeHorizon\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0mcustomer\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mcustomer\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcustomer\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumberCustomerEvents\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mtimePriceAdjustments\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m<\u001b[0m \u001b[0mtimeOfCustomerArrival\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcustomer\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mtimePriceAdjustments\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m             \u001b[0marrival_out\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcustomer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtimeOfCustomerArrival\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcustomer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcustomer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mcompany\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumberPlayers\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-7-faabd2650ae2>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mtrajekt1_out\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumberPlayers\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumberPriceAdjustmentsBeforeHorizon\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnumberPriceAdjustmentsBeforeHorizon\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0mcustomer\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mcustomer\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcustomer\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumberCustomerEvents\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mtimePriceAdjustments\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m<\u001b[0m \u001b[0mtimeOfCustomerArrival\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcustomer\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mtimePriceAdjustments\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m             \u001b[0marrival_out\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcustomer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtimeOfCustomerArrival\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcustomer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcustomer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mcompany\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumberPlayers\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def priceAdjustmentRules(c, pricesCompanies):\n",
     "    return {\n",
@@ -310,30 +303,6 @@
     "iterateSameStart=100\n",
     "companyToWatch=0\n",
     "start()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "            "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "\n"
    ]
   }
  ],
